# invoicely

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  SCREENS.md  app.tcss  main.py  pyproject.toml  stopwatch.tcss
